[package]
name = "inline-json5"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A macro to write `json` values with pure JSON5 syntax."
repository = "https://github.com/Tamschi/inline-json5"

publish = false

[dependencies]
inline-json5_macro = { version = "0.1", path = "../inline-json5_macro" }
json = "0.12"
